@@ -716,7 +716,6 @@ class BPOfferService implements Runnable {
         // Send a copy of a block to another datanode
         dn.transferBlocks(bcmd.getBlockPoolId(), bcmd.getBlocks(),
             bcmd.getTargets(), bcmd.getTargetStorageTypes());
-        dn.metrics.incrBlocksReplicated(bcmd.getBlocks().length);
         break;
       case DatanodeProtocol.DNA_INVALIDATE:
         //
