@@ -2355,6 +2355,8 @@ public class DataNode extends ReconfigurableBase
                   "Bad connect ack, targets=" + Arrays.asList(targets));
             }
           }
+        } else {
+          metrics.incrBlocksReplicated();
         }
       } catch (IOException ie) {
         LOG.warn(bpReg + ":Failed to transfer " + b + " to " +
